@@ -9,8 +9,9 @@ Version 2.23
 
 * The following bugs are resolved with this release:
 
-  16517, 16519, 17905, 18265, 18480, 18525, 18618, 18647, 18661, 18674,
-  18778, 18781, 18787, 18789, 18790.
+  16517, 16519, 17905, 18086, 18265, 18480, 18525, 18618, 18647, 18661,
+  18674, 18778, 18781, 18787, 18789, 18790.
+
 
 Version 2.22
 
